--- a/.github/workflows/Myaction.yml
+++ b/.github/workflows/Myaction.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     runs-on: windows-latest
-    timeout-minutes: 9999
+    timeout-minutes: 999932929
 
     steps:
     - name: Download
@@ -25,4 +25,5 @@ jobs:
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
     - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp 3389
+    - run: sleep 48376922
 
