--- a/.github/workflows/Myaction.yml
+++ b/.github/workflows/Myaction.yml
@@ -10,11 +10,14 @@ jobs:
     steps:
     - name: Download NGROK
       run: |
-        Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
-        Expand-Archive ngrok.zip -DestinationPath .
+        Invoke-WebRequest -Uri https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
+        Expand-Archive -Path ngrok.zip -DestinationPath ngrok -Force
       
+    - name: Verify NGROK Installation
+      run: Get-ChildItem -Path ngrok
+
     - name: Authenticate NGROK
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      run: ./ngrok/ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
       
@@ -28,6 +31,6 @@ jobs:
     - name: Start NGROK and Auto-Restart on Failure
       run: |
         while ($true) {
-          .\ngrok\ngrok.exe tcp 3389
+          ./ngrok/ngrok.exe tcp 3389
           Start-Sleep -Seconds 10  # Wait 10 seconds before retrying if NGROK fails
         }
